@@ -32,3 +32,6 @@ pmksetup :
 pmkscan :
 - add more entries in pmkscan.dat
 
+pmkinstall :
+- finish to remove err.h functions (warn & warnx);
+
